# BorealOS

./: .gitignore  .gitmodules  Bochs-linux.cfg  BochsCFG.bochs  BochsConfig-Linux.cfg  Build.sh  BuildLimine.sh  CMakeLists.txt  CONTRIBUTING.md  Compile.py  DumpKernelOBJ.sh  GDBDebug.sh  GNUmakefile  Limine.conf  Linker.ld  MakeISO.sh  Makefile  QEMU.sh  README.md  TODO.md  VSCCmpDbg.sh  bochsrc  build.sh  debug.sh  empty.sh  run.sh
Include/Core/Graphics/: Console.h  DefaultFont.h  Graphics.h
Include/Core/Hardware/: Firmware.h
Include/Core/IO/: PIC.h  PS2Controller.h  RegisterIO.h
Include/Core/Interrupts/: GDT.h  IDT.h
Include/Core/Kernel/: Panic.h
Include/Core/Memory/: HeapAllocator.h  Memory.h  PagingManager.h  PhysicalMemoryManager.h  WatermarkAlloc.h
Include/Core/Multiboot/: MB2Parser.h  multiboot.h
Include/Core/Power/: ACPI.h
Include/Core/Threading/: Threading.h
Include/Drivers/HID/: Keyboard.h  Mouse.h
Include/Drivers/IO/: PCSpeaker.h  Serial.h
Include/Utilities/: AddrUtils.h  ArchUtils.h  BitUtils.h  MathUtils.h  StrUtils.h
config/: grub.cfg  link.ld  make-cpio.sh
ramfs/: GIT_MARKER
src/: BorealOS.csproj  BorealOS.sln  Definitions.h  GNUmakefile.old  Kernel.c  Kernel.cs  Kernel.h  Settings.h  main.c
src/Boot/: Boot.S  MBParser.c  MBParser.h  multiboot.h
src/Core/: Kernel.c  Kernel.h  Math.c
src/Core/Applications/: Shell.c  Shell.h
src/Core/Devices/: CMOS.h  CPU.c  CPU.h  FPU.c  FPU.h  PIC.c  PIC.h  PIT.c  PIT.h  RTC.c  RTC.h
src/Core/Firmware/: ACPI.c  ACPI.h  LAIImplementation.c  LAIImplentation.c  uACPIImplementation.c
src/Core/Graphics/: Console.c  Graphics.c  Graphics.h  Terminal.c  Terminal.h
src/Core/Hardware/: Firmware.c
src/Core/IO/: Memory.c  Memory.h  PIC.c  PS2Controller.c  RegisterIO.c  RegisterIO.h
src/Core/Interrupts/: GDT.c  IDT.c  IDT.h  IDT_ISR.c  IDT_ISR.h  ISR.asm  Interrupts.S  Interrupts.asm  PIT.c  PIT.h
src/Core/Memory/: HeapAllocator.c  HeapAllocator.h  Memory.c  Memory.h  Paging.c  Paging.h  PagingManager.c  PhysicalAllocator.c  PhysicalAllocator.h  PhysicalMemoryManager.c  PhysicalMemoryManager.h  VirtualMemoryManager.c  VirtualMemoryManager.h  WatermarkAlloc.c
src/Core/Power/: ACPI.c  ACPI.h
src/Core/Threading/: Threading.c  Threading.h
src/Drivers/: CPU.c  CPU.h  RTC.c  RTC.h
src/Drivers/Graphics/: DefaultFont.h  Framebuffer.c  Framebuffer.h
src/Drivers/HID/: Keyboard.c  (+3 more)
src/Managers/: FilesystemManager.cs  PowerManager.cs  UserManager.cs  VideoManager.cs
src/Multiboot/: MBParser.c  Multiboot.asm
src/Utilities/: ConversionUtils.cs  FBConsoleUtils.cs  FSUtils.cs  MathUtils.c  MathUtils.h  StrUtils.c  StrUtils.cs  StrUtils.h  Terminal.cs  TimeUtils.cs  VGAConsoleUtils.cs
src/Utility/: Art.h  Color.h  Drawing.c  Drawing.h  PathUtils.c  PathUtils.h  SerialOperations.h  StringFormatter.c  StringFormatter.h  StringTools.c  StringTools.h
src/binaries/: CMakeLists.txt  README.md
src/binaries/Template/: CMakeLists.txt
src/binaries/lib/: CMakeLists.txt
src/config/: limine.conf  linker.ld
src/kernel/: CMakeLists.txt
src/kernel/Include/: Allocator.h  Definitions.h  FileSystem.h  FileSystemInterface.h  Kernel.h  Settings.h
src/kernel/Include/Boot/: LimineDefinitions.h  c_limine.h
src/kernel/Include/Core/: ProcessManager.h  ServiceManager.h
src/kernel/Include/Formats/: DriverModule.h  ELF.h  SymbolLoader.h
src/kernel/Include/IO/: PCI.h
src/kernel/Include/Utility/: ANSI.h  List.h  MemoryUtilities.h  Path.h  StringFormatter.h
src/kernel/arch/common/Boot/: LimineDefinitions.cpp
src/kernel/arch/common/Formats/: DriverModule.cpp  ELF.cpp  SymbolLoader.cpp
src/kernel/arch/common/Utility/: Path.cpp  StringFormatter.cpp
src/kernel/arch/x86_64/: Architecture.cpp  Kernel.cpp  KernelData.h  entry.S  main.cpp
src/kernel/arch/x86_64/Core/: ACPI.cpp  ACPI.h  CPU.cpp  CPU.h  ProcessManager.cpp  ServiceManager.cpp
src/kernel/arch/x86_64/Core/Drivers/: DriverManager.cpp  DriverManager.h
src/kernel/arch/x86_64/Core/Firmware/: ACPI.cpp  ACPI.h  Hardware.cpp  Hardware.h  LAI.cpp  lai_include.h
src/kernel/arch/x86_64/Core/Time/: HPET.cpp  HPET.h  RTC.cpp  RTC.h  Scheduler.cpp  Scheduler.h  TSC.cpp  TSC.h
src/kernel/arch/x86_64/File/Systems/: InitRam.cpp  InitRam.h
src/kernel/arch/x86_64/FileSystems/: InitRam.cpp  InitRam.h  InitRamFileSystem.cpp  InitRamFileSystem.h
src/kernel/arch/x86_64/IO/: FBConsole.cpp  FBConsole.h  FramebufferConsole.cpp  FramebufferConsole.h  PCI.cpp  Serial.cpp  Serial.h  SerialPort.cpp  SerialPort.h
src/kernel/arch/x86_64/Interrupts/: APIC.cpp  APIC.h  GDT.S  GDT.cpp  GDT.h  IDT.S  IDT.cpp  IDT.h  InterruptController.h  PIC.cpp  PIC.h  Syscall.S  Syscall.cpp  Syscall.h  TSS.cpp  TSS.h
src/kernel/arch/x86_64/Memory/: HeapAllocator.cpp  HeapAllocator.h  PMM.cpp  PMM.h  Paging.cpp  Paging.h
src/modules/: CMakeLists.txt  README.md
src/modules/Common/Disk/: CMakeLists.txt  Service.h
src/modules/Common/Disk/src/: DiskTracker.cpp  DiskTracker.h  main.cpp
src/modules/Common/DiskService/: Service.h
src/modules/Common/DiskService/src/: DiskTracker.cpp  DiskTracker.h
src/modules/Common/HID/: CMakeLists.txt  Keycodes.h  Service.h
src/modules/Common/HID/src/: Tracker.cpp  main.cpp
src/modules/Common/HIDService/: CMakeLists.txt
src/modules/Common/HIDService/src/: Tracker.h
src/modules/Common/Networking/: CMakeLists.txt  Service.h
src/modules/Common/Networking/src/: ARPTable.cpp  ARPTable.h  Tracker.cpp  Tracker.h  main.cpp
src/modules/Common/RAMDisk/: CMakeLists.txt  Service.h
src/modules/Common/RAMDisk/src/: main.cpp
src/modules/Include/: Module.h
src/modules/Template/: CMakeLists.txt  Service.h
src/modules/Template/src/: main.cpp
src/modules/x86_64/: module.ld
src/modules/x86_64/E1000/: CMakeLists.txt  Service.h
src/modules/x86_64/E1000/src/: E1000Definitions.h  main.cpp
src/modules/x86_64/PS2/: CMakeLists.txt  Service.h
src/modules/x86_64/PS2/src/: PS2Definitions.h  main.cpp
src/modules/x86_64/RAMDisk/: CMakeLists.txt  Service.h
src/modules/x86_64/RAMDisk/src/: main.cpp
src/scripts/: create_hdd.sh  make_cpio.sh
(+36 files in other folders)
